--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,21 @@
   text-align: center;
 }
 
+.divPrincipal {
+  display: flex;
+  justify-content: center;
+}
+
+.tabelas {
+  display: flex;
+  justify-content: center;
+}
+
+.tabelas .pTempoReal{
+  width: 300px;
+  margin-right: 200px;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
